--- a/src/main/webapp/affichage_1.xhtml
+++ b/src/main/webapp/affichage_1.xhtml
@@ -13,11 +13,14 @@
         <ui:repeat value="#{bean.nombresSuivants}" var="n" varStatus="status">
             #{n + 1}#{! status.last ? ', ' : ''}
         </ui:repeat>
-        <h:form>
+        
+        <!--<h:form>
             <h:commandLink action="formulaire_1" value="Saisir un autre nombre"/>
-        </h:form>
+        </h:form>-->
+        <h:link outcome="formulaire_1" value="Saisir un autre nombre (link)"/>
     </h:body>
 </html>
 <!--    
     Si on reload la page, le bean est réinitialiser car la requête précédente est terminée.
+    On ne voit pas affichage_1 dans l'URL.
 -->
