Analyse d'un post tout simple: vérification du problème sur l'affichage au préalable d'une ancienne saisie.

--- a/src/main/webapp/affichage_1.xhtml
+++ b/src/main/webapp/affichage_1.xhtml
@@ -23,4 +23,5 @@
 <!--    
     Si on reload la page, le bean est réinitialiser car la requête précédente est terminée.
     On ne voit pas affichage_1 dans l'URL.
+    Il n'est pas possible d'afficher le nombre saisie avant dans la zone de texte.
 -->
