--- a/src/main/webapp/affichage_4.xhtml
+++ b/src/main/webapp/affichage_4.xhtml
@@ -5,21 +5,21 @@
       xmlns:ui="jakarta.faces.facelets"
       xmlns:f="jakarta.faces.core">
     <h:head>
-        <title>Application&gt;affichage_3</title>
+        <title>Application&gt;affichage_4</title>
     </h:head>
 
     <f:metadata>
-        <f:viewParam name="nb" value="#{bean.nombre}"/>
+        <f:viewParam name="nb" value="#{bean4.nombre}"/>
     </f:metadata>
     
     <h:body>
-        <h1>Application&gt;affichage_3</h1>
+        <h1>Application&gt;affichage_4</h1>
         Les nombres : <br/>
-        <ui:repeat value="#{bean.nombresSuivants}" var="n" varStatus="status">
+        <ui:repeat value="#{bean4.nombresSuivants}" var="n" varStatus="status">
             #{n + 1}#{! status.last ? ', ' : ''}
         </ui:repeat>
         
-        <h:link outcome="formulaire_3" value="Saisir un autre nombre (link)"/>
+        <h:link outcome="formulaire_4?nb=#{bean4.nombre}" value="Saisir un autre nombre (RPG4)"/>
     </h:body>
 </html>
 <!--    
