Rajout de lien de redirection pour faciliter la navigation entre les différents formulaires.

--- a/src/main/webapp/affichage_1.xhtml
+++ b/src/main/webapp/affichage_1.xhtml
@@ -18,6 +18,7 @@
             <h:commandLink action="formulaire_1" value="Saisir un autre nombre"/>
         </h:form>-->
         <h:link outcome="formulaire_1" value="Saisir un autre nombre (link)"/>
+        <p><h:outputLink value="index.html">Accueil</h:outputLink></p>
     </h:body>
 </html>
 <!--    
