--- a/src/main/webapp/affichage_2.xhtml
+++ b/src/main/webapp/affichage_2.xhtml
@@ -14,7 +14,8 @@
             #{n + 1}#{! status.last ? ', ' : ''}
         </ui:repeat>
         
-        <h:link outcome="formulaire_2" value="Saisir un autre nombre (link)"/>
+        <h:link outcome="formulaire_2" value="Saisir un autre nombre (2)"/>
+        <p><h:outputLink value="index.html">Accueil</h:outputLink></p>
     </h:body>
 </html>
 <!--    
