--- a/src/main/webapp/affichage_3.xhtml
+++ b/src/main/webapp/affichage_3.xhtml
@@ -19,7 +19,8 @@
             #{n + 1}#{! status.last ? ', ' : ''}
         </ui:repeat>
         
-        <h:link outcome="formulaire_3" value="Saisir un autre nombre (link)"/>
+        <h:link outcome="formulaire_3" value="Saisir un autre nombre (3)"/>
+        <p><h:outputLink value="index.html">Accueil</h:outputLink></p>
     </h:body>
 </html>
 <!--    
