--- a/src/main/webapp/affichage_4.xhtml
+++ b/src/main/webapp/affichage_4.xhtml
@@ -20,6 +20,7 @@
         </ui:repeat>
         
         <h:link outcome="formulaire_4?nb=#{bean4.nombre}" value="Saisir un autre nombre (RPG4)"/>
+        <p><h:outputLink value="index.html">Accueil</h:outputLink></p>
     </h:body>
 </html>
 <!--    
