--- a/src/main/webapp/formulaire_1.xhtml
+++ b/src/main/webapp/formulaire_1.xhtml
@@ -16,6 +16,7 @@
             <h:messages for="nombre"/>
         </h:form>
 
+        <p><h:outputLink value="index.html">Accueil</h:outputLink></p>
     </h:body>
 </html>
 <!-- 
