--- a/src/main/webapp/formulaire_2.xhtml
+++ b/src/main/webapp/formulaire_2.xhtml
@@ -20,6 +20,7 @@
             _ On n'a pas les bons chiffres: il y a nouvelle instance de bean donc value à 0.
         -->
 
+        <p><h:outputLink value="index.html">Accueil</h:outputLink></p>
     </h:body>
 </html>
 <!-- 
