--- a/src/main/webapp/formulaire_4.xhtml
+++ b/src/main/webapp/formulaire_4.xhtml
@@ -24,6 +24,7 @@
             _ On peut maintenant garder en marque page les résultats car le nombre est dans l'URL.
         -->
 
+        <p><h:outputLink value="index.html">Accueil</h:outputLink></p>
     </h:body>
 </html>
 <!-- 
