--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,10 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>Liste des formulaires:</h1>
+        <p><a href="formulaire_1.xhtml">Formulaire 1: analyse d'un POST </a></p>
+        <p><a href="formulaire_2.xhtml">Formulaire 2: modèle PRG 4</a></p>
+        <p><a href="formulaire_3.xhtml">Formulaire 3: paramètre de vue</a></p>
+        <p><a href="formulaire_4.xhtml">Formulaire 4: valeur par défaut</a></p>
     </body>
 </html>
