--- a/src/main/webapp/affichage__1.xhtml
+++ b/src/main/webapp/affichage__1.xhtml
@@ -7,10 +7,9 @@
     <body>
 
         <ui:composition template="./WEB-INF/templates/template_default.xhtml">
-
-            <ui:define name="top">
-                TP PRG > Exercice 1 > Affichage
-            </ui:define>
+            
+            <ui:param name="titre" value="Exercice 1"/>
+            <ui:param name="type" value="Affichage"/>
 
             <ui:define name="content">
                 <h1>Application&gt;affichage_1</h1>
