--- a/src/main/webapp/formulaire__1.xhtml
+++ b/src/main/webapp/formulaire__1.xhtml
@@ -7,13 +7,11 @@
     <body>
 
         <ui:composition template="./WEB-INF/templates/template_default.xhtml">
-
-            <ui:define name="top">
-                TP PRG > Exercice 1 > Formulaire
-            </ui:define>
+            <ui:param name="titre" value="Exercice 1"/>
+            <ui:param name="type" value="Formulaire"/>
 
             <ui:define name="content">
-                <h1>Application&gt;formulaire_1</h1>
+                <h1>Application&gt;formulaire__1</h1>
 
                 <h:form>
                     <h:outputLabel value="Entrez un nombre" for="nombre"/>
